# funke

./: .gitignore  AGENTS.md  Makefile  event-management-spec.md
.claude/agents/: ui_ux_agent.md
.codex/: auth.json  config.toml  history.jsonl  logs_1.sqlite-shm  logs_1.sqlite-wal  state_5.sqlite  version.json
backend/: Makefile  pyproject.toml
backend/app/: main.py
backend/app/api/admin/: events.py  lottery.py
backend/app/api/public/: cancellations.py  confirmations.py  registrations.py
backend/app/models/: __init__.py  admin.py  event.py  lottery.py  message.py  registration.py
backend/app/services/: __init__.py  auth.py  config.py  email_client.py  email_service.py  event_service.py  logging.py  lottery_service.py  registration_service.py
backend/app/workers/: handler.py
backend/tests/integration/: test_smtp_send.py
backend/tests/unit/: conftest.py  test_admin_features.py  test_bug_fixes.py  test_email_service.py  test_lottery.py  test_registration_flow.py
docs/: RESPONSIVE_DESIGN_SPEC.md  TESTANLEITUNG.md  anleitung.md
frontend/: .eslintrc.cjs  .prettierignore  Makefile  index.html  package-lock.json  package.json
frontend/src/: App.vue  main.js
infra/: Makefile  cdk.json  pyproject.toml
infra/cdk/: app.py
infra/cdk/stacks/: __init__.py  api_stack.py  database_stack.py  domain_stack.py  scheduler_stack.py  storage_stack.py
specs/: 004-improve-user-registration.md  004-tasks.md  005-registration-management-page.md  005-tasks.md  006-custom-discard-flow.md  006-tasks.md  008-design-overhaul.md  008-tasks.md
(+40 files in other folders)
